ChangeLog

20120910
	rise_set.c
	rise_set.h
		Added _offset functions, probably fixed #2616747.

	Petr Kubanek

20120428
	julian_day.c
		Removed not-needed BSD_SOURCE define
	
	Petr Kubanek

20120111
	utility.c:
	utility.h:
	julian_day.c:
		Fix problems with double redefinition, pointed by Lukasz Michalik
	
	Petr Kubanek

*********** release of 0.14.0

20110730
	airmass.c:
		Added ln_get_alt_from_airmass function

	doc/doxyfile.in,doc/doxyfile
		Generate input doxyfile from doxyfile.in
	
	Petr Kubanek

20090917
	sidereal_time.c:
		Fix problem with double transformation of degrees to hours, pointed by Edward Falk

*********** release of 0.13.0

20090514
	heliocentric_time.h:
	heliocentric_time.c:
	test.c:
		Added heliocentric time corrections calculations.

	Petr Kubanek

20090420
	julian_day.h: 
		Removed "#ifndef __WIN32__" to make ln_get_date_from_timet function available in win32

	ln_types.h:
		Changed tv_sec type from long to time_t to match standard definition
		Clarified field documentation for ln_nutation

	julian_day.c:
		Removed "#ifndef __WIN32__" to make ln_get_date_from_timet function available in win32
		Remove platform-dependent code form ln_get_date_from_sys. The function now simply makes a call to gettimeofday() - a Win32 implementation is supplied in utility.c, and this function is no longer limited to one-second precision under Windows.

	nutation.c:
		Fixed two values in nutation coefficients table
		Fixed method used to compute longitude/obliquity offsets. The general form of the calculation is supposed to be, e.g., coeff*sin(D+M+MM+F+O), not coeff*(sin(D) + sin(M) + sin(MM) + ...)
		Added correct computation for mean ecliptic (Meeus eq 22.2)
		(These fixes also fix ln_get_apparent_sidereal_time, and affect:
			ln_get_solar_equ_coords
			ln_get_solar_ecl_coords
			ln_get_equ_from_ecl (possibly needs true ecliptic rather than mean)
			ln_get_ecl_from_equ (possibly needs true ecliptic rather than mean)
		)

	utility.c: