@@ -1,1 +1,5 @@
 SETUP_EXECUTABLE(test)
+
+IF(UNIX)
+  TARGET_LINK_LIBRARIES(test m)
+ENDIF(UNIX)
